--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <script src="js/vendor/zepto.min.js"></script>
         <script src="js/helper.js"></script>
-	<p>Hola como estas este es una prueba</p>
+	<p>Hola como estas este es una prueba y cambio</p>
 
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
