subiendo mis videos

--- a/index.html
+++ b/index.html
@@ -43,8 +43,22 @@
 
         <script src="js/vendor/zepto.min.js"></script>
         <script src="js/helper.js"></script>
-	<p>Hola como estas este es una prueba y cambio</p>
+	
+        <h1 align = "center" >Hello everyBody..!!</h1>
+      
+            <div align = "center">
+            <p align = "center">
+                This is a video about a center park in Peru. it is called "Paseo de las Aguas" in Lima near the stadium, at night
+		enjoy video, so it's late to follow this course but I do my major efforce.
 
+              
+            </p>
+          		<video width="420" height="540" controls>
+  			<source src="videos/ParqueAguasPeru.mp4" type="video/mp4">
+  			  Your browser does not support the video tag.
+		</video>
+        	<p align = "center" style = "color:#ddd"> Enjoying this Course..!!! </p>
+    	     </div>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
